manifests/deploy.yaml
#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: trader
  labels:
    app: trader
    solution: stock-trader
    version: v1
  annotations:
    prism.subkind: Liberty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trader
      version: v1
  template:
    metadata:
      labels:
        app: trader
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
      - name: trader
#        image: ibmstocktrader/trader:basicregistry # Docker Hub with basic registry sign in
        image: linsun/trader:v1
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9080
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9080
          initialDelaySeconds: 60
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 5 # Allow a little time to exec into the pod to grab FFDCs before it's killed
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: trader-service
  labels:
    app: trader
    solution: stock-trader
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
      nodePort: 32388
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
      nodePort: 32389
  selector:
    app: trader
