manifests/portfolio-empty-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
