manifests/trader-gateway-sds-nlb1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: trader-gateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMP
      credentialName: trade-credential 
    hosts:
    - "*"
