manifests/portfolio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-portfolio
spec:
  hosts:
    - portfolio-service 
  http:
  - route:
    - destination:
        host: portfolio-service.portfolio
        port:
          number: 9080
