manifests/trader-dr-lb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-trader
spec:
  host: trader-service
  subsets:
  - name: v1
    labels:
      version: "v1"
  - name: v2
    labels:
      version: "v2"
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: user
          ttl: 300s
