manifests/trader-vs-retries-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-trader
spec:
  hosts:
    - '*'
  gateways:
    - trader-gateway
  http:
  - match:
    - uri:
        prefix: /trader
    route:
    - destination:
        host: trader-service
        port:
          number: 9080
    retries:
      attempts: 3
      perTryTimeout: 2s
    timeout: 10s
