manifests/virtualservice-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-trader
spec:
  gateways:
  - trader-gateway
  hosts:
  - '*'
  http:
    - match:
        - headers:
            user-agent:
              regex: '.*Firefox.*'
      route:
        - destination:
            host: trader-service
            subset: v2
    - route:
        - destination:
            host: trader-service
            subset: v1
